--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -10,8 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/question_text"
-        android:id="@+id/question_text"/>
+        android:id="@+id/question_text_view"
+        android:gravity="center"
+        tools:text = "@string/question_moscow"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -22,14 +23,63 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/true_button"
-            android:id="@+id/true_button"/>
+            android:id="@+id/true_button"
+            android:layout_marginRight="4dp"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/false_button"
-            android:id="@+id/false_button"/>
+            android:id="@+id/false_button"
+            android:layout_marginLeft="4dp"/>
 
     </LinearLayout>
 
+<!--    <LinearLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
+
+<!--        <Button-->
+<!--            android:id="@+id/prev_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:drawableLeft="@drawable/arrow_left"-->
+<!--            android:drawablePadding="4dp"-->
+<!--            android:text="@string/prev_button"-->
+<!--            android:layout_marginRight="4dp"/>-->
+
+<!--        <Button-->
+<!--            android:id="@+id/next_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:drawableEnd="@drawable/arrow_right"-->
+<!--            android:drawablePadding="4dp"-->
+<!--            android:text="@string/next_button"-->
+<!--            android:layout_marginLeft="4dp"/>-->
+
+<!--    </LinearLayout>-->
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="4dp"
+            android:src="@drawable/arrow_left"
+            android:contentDescription="Листать влево"/>
+
+        <ImageButton
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/arrow_right"
+            android:contentDescription="Листать вправо"/>
+
+    </LinearLayout>
 </LinearLayout>
