--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="visible"
+    tools:visibility="visible">
 
     <TextView
+        android:id="@+id/answer_percent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"
-        android:id="@+id/question_text_view"
         android:gravity="center"
-        tools:text = "@string/question_moscow"/>
+        android:hint="@string/answer_percent"
+        android:padding="12dp"
+        android:textColor="#000000"
+        android:textSize="34sp"
+        android:visibility="visible"
+        tools:text="@string/answer_percent" />
+
+    <TextView
+        android:id="@+id/question_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="24dp"
+        tools:text="@string/question_moscow" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -23,42 +37,42 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/true_button"
-            android:layout_marginRight="4dp"/>
+            android:layout_marginRight="4dp"
+            android:text="@string/true_button" />
 
         <Button
             android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/false_button"
-            android:layout_marginLeft="4dp"/>
+            android:layout_marginLeft="4dp"
+            android:text="@string/false_button" />
 
     </LinearLayout>
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal">-->
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:orientation="horizontal">-->
 
-<!--        <Button-->
-<!--            android:id="@+id/prev_button"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:drawableLeft="@drawable/arrow_left"-->
-<!--            android:drawablePadding="4dp"-->
-<!--            android:text="@string/prev_button"-->
-<!--            android:layout_marginRight="4dp"/>-->
+    <!--        <Button-->
+    <!--            android:id="@+id/prev_button"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:drawableLeft="@drawable/arrow_left"-->
+    <!--            android:drawablePadding="4dp"-->
+    <!--            android:text="@string/prev_button"-->
+    <!--            android:layout_marginRight="4dp"/>-->
 
-<!--        <Button-->
-<!--            android:id="@+id/next_button"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:drawableEnd="@drawable/arrow_right"-->
-<!--            android:drawablePadding="4dp"-->
-<!--            android:text="@string/next_button"-->
-<!--            android:layout_marginLeft="4dp"/>-->
+    <!--        <Button-->
+    <!--            android:id="@+id/next_button"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:drawableEnd="@drawable/arrow_right"-->
+    <!--            android:drawablePadding="4dp"-->
+    <!--            android:text="@string/next_button"-->
+    <!--            android:layout_marginLeft="4dp"/>-->
 
-<!--    </LinearLayout>-->
+    <!--    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -70,16 +84,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
-            android:src="@drawable/arrow_left"
-            android:contentDescription="Листать влево"/>
+            android:contentDescription="Листать влево"
+            android:src="@drawable/arrow_left" />
 
         <ImageButton
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
-            android:src="@drawable/arrow_right"
-            android:contentDescription="Листать вправо"/>
+            android:contentDescription="Листать вправо"
+            android:src="@drawable/arrow_right" />
 
     </LinearLayout>
 
@@ -93,6 +107,6 @@
             android:id="@+id/reset_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/reset_button"/>
+            android:text="@string/reset_button" />
     </LinearLayout>
 </LinearLayout>
