--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
         android:textColor="#000000"
         android:textSize="34sp"
         android:visibility="visible"
-        tools:text="@string/answer_percent" />
+        tools:text="@string/answer_percent"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/question_text_view"
@@ -48,31 +49,6 @@
             android:text="@string/false_button" />
 
     </LinearLayout>
-
-    <!--    <LinearLayout-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:orientation="horizontal">-->
-
-    <!--        <Button-->
-    <!--            android:id="@+id/prev_button"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:drawableLeft="@drawable/arrow_left"-->
-    <!--            android:drawablePadding="4dp"-->
-    <!--            android:text="@string/prev_button"-->
-    <!--            android:layout_marginRight="4dp"/>-->
-
-    <!--        <Button-->
-    <!--            android:id="@+id/next_button"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:drawableEnd="@drawable/arrow_right"-->
-    <!--            android:drawablePadding="4dp"-->
-    <!--            android:text="@string/next_button"-->
-    <!--            android:layout_marginLeft="4dp"/>-->
-
-    <!--    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="wrap_content"
