--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+
         <ImageButton
             android:id="@+id/prev_button"
             android:layout_width="wrap_content"
@@ -70,6 +71,19 @@
             android:layout_marginLeft="4dp"
             android:contentDescription="Листать вправо"
             android:src="@drawable/arrow_right" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="@string/cheat_button"/>
 
     </LinearLayout>
 
