--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@drawable/cjlghg1"
     android:orientation="vertical"
     android:visibility="visible"
     tools:visibility="visible">
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="24dp"
+        android:textSize="16sp"
         tools:text="@string/question_moscow" />
 
     <LinearLayout
@@ -78,12 +80,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/cheat_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/cheat_button"/>
+        <Button
+            android:id="@+id/cheat_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/cheat_button" />
 
     </LinearLayout>
 
